...
        children: [
          Row(
            children: [
              CustomImagePicker(imageController: _imageController),
              const Spacer(),
              TextButton(
                key: const Key('save_button'),
                onPressed: _submitForm,
                child: const Text('Save & Update'),
              ),
            ],
          ),
          CustomFormField(
...
                ? 'Please enter your display name'
                : null,
          ),
          CustomDropdownField(
            label: 'Gender',
            controller: _genderController,
            items: const ['Male', 'Female'],
            validator: (value) =>
                value?.isEmpty ?? true ? 'Please select your gender' : null,
          ),
          CustomDateField(
            label: 'Birthday',
            controller: _birthdayController,
...
